--- a/Languages/ChineseSimplified/DefInjected/ThingCategoryDef/ThingCategories.xml
+++ b/Languages/ChineseSimplified/DefInjected/ThingCategoryDef/ThingCategories.xml
@@ -1,12 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
+  <!--EN: knowledge-->
   <Knowledge.label>知识</Knowledge.label>
+  <!--EN: neolithic-->
   <Neolithic.label>石器时代</Neolithic.label>
+  <!--EN: medieval-->
   <Medieval.label>中世纪</Medieval.label>
+  <!--EN: industrial-->
   <Industrial.label>工业时代</Industrial.label>
+  <!--EN: spacer-->
   <Spacer.label>太空时代</Spacer.label>
+  <!--EN: ultra-->
   <Ultra.label>极致时代</Ultra.label>
+  <!--EN: archotech-->
   <Archotech.label>远古科技</Archotech.label>
 
 
