--- a/Languages/ChineseTraditional/DefInjected/WorkTypeDef/WorkTypes.xml
+++ b/Languages/ChineseTraditional/DefInjected/WorkTypeDef/WorkTypes.xml
@@ -1,13 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <LanguageData>
 
-  <HR_Learn.label>學習</HR_Learn.label>
-  <HR_Learn.description>獲得新知識。</HR_Learn.description>
+  <!--EN: Study-->
   <HR_Learn.labelShort>學習</HR_Learn.labelShort>
+  <!--EN: Student-->
   <HR_Learn.pawnLabel>學生</HR_Learn.pawnLabel>
-  <HR_Learn.gerundLabel>學習中</HR_Learn.gerundLabel>
+  <!--EN: studying-->
+  <HR_Learn.gerundLabel>學習</HR_Learn.gerundLabel>
+  <!--EN: Acquire new knowledge.-->
+  <HR_Learn.description>獲取新知識。</HR_Learn.description>
+  <!--EN: Study at-->
   <HR_Learn.verb>學習</HR_Learn.verb>
-
 
   <!--I changed from "learn" to "study", please review-->
 
