--- a/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
+++ b/Languages/ChineseTraditional/Keyed/HumanResources_keys.xml
@@ -2,77 +2,145 @@
 <LanguageData>
 
   <!--UI-->
+  
+  <!--EN: Tech-->
   <TabKnowledge>科技</TabKnowledge>
+  <!--EN: Knowledge-->
   <TabKnowledgeTitle>知識</TabKnowledgeTitle>
+  <!--EN: Weapons Proficiency-->
   <TabKnowledgeWeapons>武器熟練度</TabKnowledgeWeapons>
-  <ShowCommon>顯示原版</ShowCommon>
-  <ShowMelee>顯示近戰武器。</ShowMelee>
-  <ShowRanged>顯示遠程武器。</ShowRanged>
-  <ShowAvailable>顯示可供學習的技術。</ShowAvailable>
+  <!--EN: Show common weapons.-->
+  <ShowCommon>顯示通用武器</ShowCommon>
+  <!--EN: Show melee weapons.-->
+  <ShowMelee>顯示近戰武器</ShowMelee>
+  <!--EN: Show ranged weapons.-->
+  <ShowRanged>顯示遠程武器</ShowRanged>
+  <!--EN: Show techs available to learn.-->
+  <ShowAvailable>顯示可供學習的科技。</ShowAvailable>
+  <!--EN: Compact view.-->
   <ShowCompact>小窗口</ShowCompact>
+  <!--EN: Expand-->
   <Expand>擴展</Expand>
-  <Collapse>失敗</Collapse>
+  <!--EN: Collapse-->
+  <Collapse>折疊</Collapse>
+  <!--EN: Catalog-->
   <TabCatalogue>目錄</TabCatalogue>
-  <AvailableBooksReport>{1}號書架中有{0}本書</AvailableBooksReport>
+  <!--EN: {0} books in {1} shelves-->
+  <AvailableBooksReport>{1}個書架上有{0}本書</AvailableBooksReport>
 
   <!--Settings-->
-  <TechPoolModeTitle>知識泉源...</TechPoolModeTitle>
-  <TechPoolModeDesc>定義生成的玩家派系殖民者的技術池。</TechPoolModeDesc>
-  <TechPoolMode_Both>陣營相互關係設置</TechPoolMode_Both>
-  <TechPoolMode_TechLevel>僅該派系的技術水平</TechPoolMode_TechLevel>
-  <TechPoolMode_Starting>僅該派系的起始技術</TechPoolMode_Starting>
-  <TechPoolIncludesScenarioTitle>包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>
+  
+  <!--EN: Knowledge generation draws from...-->
+  <TechPoolModeTitle>殖民者的開局自帶科技來自…</TechPoolModeTitle>
+  <!--EN: Defines the pool from which to draw technologies for the player's colonists when they are created.-->
+  <TechPoolModeDesc>定義玩家派系殖民者的科技池。當玩家派系的殖民者被生成時，將從中隨機抽選若幹項開局自帶科技。</TechPoolModeDesc>
+  <!--EN: both faction settings-->
+  <TechPoolMode_Both>以下二者</TechPoolMode_Both>
+  <!--EN: the faction's tech level only-->
+  <TechPoolMode_TechLevel>玩家派系的科技水平</TechPoolMode_TechLevel>
+  <!--EN: the starting techs for that faction only-->
+  <TechPoolMode_Starting>玩家派系的開局科技</TechPoolMode_Starting>
+  <!--EN: Also include starting research parts from the scenario.-->
+  <TechPoolIncludesScenarioTitle>同時包括劇本設定的開局科技</TechPoolIncludesScenarioTitle>
+  <!--EN: If checked, any technologies you add on the scenario editor will also be included on the knowledge pool for new colonists.-->
   <TechPoolIncludesScenarioDesc>如果選中，還將包括您在劇本編輯器中添加的開局科技。</TechPoolIncludesScenarioDesc>
-  <WeaponPoolModeTitle>初始攜帶武器的戰鬥專家</WeaponPoolModeTitle>
-  <WeaponPoolModeDesc>定義當玩家的殖民者（僅限於射擊或格鬥專精）被生成時可攜帶的武器池。</WeaponPoolModeDesc>
-  <WeaponPoolMode_Both>兩種武器清單</WeaponPoolMode_Both>
-  <WeaponPoolMode_TechLevel>該陣營的技術等級</WeaponPoolMode_TechLevel>
-  <WeaponPoolMode_Scenario>僅劇本</WeaponPoolMode_Scenario>
-  <!--MISSING--><FreeScenarioWeaponsTitle>All colonists start with scenario weapons.</FreeScenarioWeaponsTitle>
-  <!--MISSING--><FreeScenarioWeaponsDesc>If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use. (The vanilla "Rich Explorer" scenario was patched to always do this, regardless of what's chosen here) </FreeScenarioWeaponsDesc>
+  <!--EN: Combat specialists start with weapons from...-->
+  <WeaponPoolModeTitle>戰鬥精英殖民者的初始武器精通列表來自…</WeaponPoolModeTitle>
+  <!--EN: Defines the pool from which to draw weapons proficiency for the player's colonists who are expert shooters or brawlers when they are created.-->
+  <WeaponPoolModeDesc>定義擅長戰鬥的玩家派系殖民者的初始武器精通列表。</WeaponPoolModeDesc>
+  <!--EN: both weapon lists-->
+  <WeaponPoolMode_Both>以下二者</WeaponPoolMode_Both>
+  <!--EN: the faction's tech level only-->
+  <WeaponPoolMode_TechLevel>玩家派系的科技水平</WeaponPoolMode_TechLevel>
+  <!--EN: the scenario only-->
+  <WeaponPoolMode_Scenario>劇本</WeaponPoolMode_Scenario>
+  <!--EN: All colonists start with scenario weapons.-->
+  <FreeScenarioWeaponsTitle>所有殖民者一開始就知道如何使用劇本添加的武器。</FreeScenarioWeaponsTitle>
+  <!--EN: If checked, any weapons you add on the scenario editor will also be included on the list of weapons the player's colonists can use. (The vanilla "Rich Explorer" scenario was patched to always do this, regardless of what's chosen here)-->
+  <FreeScenarioWeaponsDesc>若開啟此項，所有您在劇本編輯器里添加的武器會被自動添加至殖民者的初始武器精通列表。（原版遊戲所帶的“富有的探險家”劇本已強制開啟此選項，不受此項勾選與否影響）</FreeScenarioWeaponsDesc>
+  <!--EN: Difficulty settings slows down research.-->
   <ResearchSpeedTiedToDifficultyTitle>高難度會減緩研究速度。</ResearchSpeedTiedToDifficultyTitle>
-  <ResearchSpeedTiedToDifficultyDesc>開啟此項研究速度將隨難度增加而減緩，最多降低70%。不開啟此項時，默認為原版的90%。</ResearchSpeedTiedToDifficultyDesc>
+  <!--EN: If checked, the base speed for research is tied to the difficulty settings, with no changes on Easy and up to 30% slower on Hard. If unchecked, it defaults to 10% slower than vanilla.-->
+  <ResearchSpeedTiedToDifficultyDesc>若開啟此項，研究速度將隨難度增加而減緩（簡單難度不變，困難難度降低30%）。不開啟此項時，一律較原版降低10%。</ResearchSpeedTiedToDifficultyDesc>
+  <!--EN: Difficulty settings slows down tech studying.</-->
   <StudySpeedTiedToDifficultyTitle>高難度會減緩學習速度。</StudySpeedTiedToDifficultyTitle>
-  <StudySpeedTiedToDifficultyDesc>開啟此項學習新技術的基本速度將與難度設置相關聯，其中中等難度降至90％，最高降至80％。</StudySpeedTiedToDifficultyDesc>
+  <!--EN: If checked, the base speed for studying new techs is tied to the difficulty settings, dropping 10% on Medium up to 20% on hard.-->
+  <StudySpeedTiedToDifficultyDesc>若開啟此項，學習新科技的基礎速度將與難度設置相關聯（中等難度降低10％，困難難度降低20％）。</StudySpeedTiedToDifficultyDesc>
 
   <!--Things-->
+  
+  <!--EN: Empty-->
   <BookStoreEmpty>空的</BookStoreEmpty>
-  <BookStoreCapacity>存檔技術：{0} / {1}</BookStoreCapacity>
-  <BookStoreRetrieveBook>書籍檢索</BookStoreRetrieveBook>
-  <BookStoreRetrieveBookDesc>在暑假中查找並取出指定的書籍</BookStoreRetrieveBookDesc>
-  <BookStoreNoInternalStorage>{0}沒有匹配到任何書架。</BookStoreNoInternalStorage>
-  <KnowledgeLabel>{0}知識</KnowledgeLabel>
-  <Book>{0}之書</Book>
-  <BookCompendium>{0}綱要</BookCompendium>
-  <BookManual>{0}手冊</BookManual>
-  <BookTheory>{0}論著</BookTheory>
-  <BookDatabase>{0}數據庫</BookDatabase>
+  <!--EN: Archived technologies: {0}/{1}-->
+  <BookStoreCapacity>歸檔科技：{0} / {1}</BookStoreCapacity>
+  <!--EN: Retrieve Book-->
+  <BookStoreRetrieveBook>取出書本</BookStoreRetrieveBook>
+  <!--EN: Find and remove a particular book from the book shelf.-->
+  <BookStoreRetrieveBookDesc>在書架中查找並取出特定的書籍</BookStoreRetrieveBookDesc>
+  <!--EN: {0} doesn't fit at any book shelf.-->
+  <BookStoreNoInternalStorage>{0} 無法被放入任何書架。</BookStoreNoInternalStorage>
+  <!--EN: {0} knowledge-->
+  <KnowledgeLabel>{0} 的知識</KnowledgeLabel>
+  <!--EN: Book of {0}-->
+  <Book>{0} 之書</Book>
+  <!--EN: {0} Compendium-->
+  <BookCompendium>{0} 大綱</BookCompendium>
+  <!--EN: {0} Manual-->
+  <BookManual>{0} 手冊</BookManual>
+  <!--EN: {0} Theory-->
+  <BookTheory>{0} 理論</BookTheory>
+  <!--EN: {0} Database-->
+  <BookDatabase>{0} 數據庫</BookDatabase>
 
   <!--Feedback-->
-  <MessageStudyComplete>{0_nameDef}已經了解了{1}的秘密。</MessageStudyComplete>
-  <MessageDocumentComplete>{0_nameDef}在{1}上寫了一本書。</MessageDocumentComplete>
-  <MessageFiledTech>{0}的知識已添加到我們的庫中。</MessageFiledTech>
-  <MessageEjectedTech>{0}的知識已從我們的庫中刪除。</MessageEjectedTech>
-  <MessageTrainingComplete>{0_nameDef}已掌握{1}。</MessageTrainingComplete>
-  <NothingToAddToLibrary>你什麼都不懂，{0_nameFull}！</NothingToAddToLibrary>
-  <AlreadyKnowsTheWholeLibrary>{0_nameDef}已閱讀所有書籍。</AlreadyKnowsTheWholeLibrary>
-  <LacksFundamentalKnowledge>{0_nameDef}缺少有關這些課題的基本知識。</LacksFundamentalKnowledge>
+  
+  <!--EN: {0_nameDef} has learned the secrets of {1}.-->
+  <MessageStudyComplete>{0_nameDef} 已經弄懂了 {1} 的秘密。</MessageStudyComplete>
+  <!--EN: {0_nameDef} wrote a book on {1}.-->
+  <MessageDocumentComplete>{0_nameDef} 寫了一本關於 {1} 的書。</MessageDocumentComplete>
+  <!--EN: The knowledge for {0} was added to our library.-->
+  <MessageFiledTech>{0} 的知識已添加到我們的圖書館中。</MessageFiledTech>
+  <!--EN: The knowledge for {0} was removed from our library.-->
+  <MessageEjectedTech>{0} 的知識已從我們的圖書館中移除。</MessageEjectedTech>
+  <!--EN: {0_nameDef} has mastered the {1}.-->
+  <MessageTrainingComplete>{0_nameDef} 已能熟練使用 {1}。</MessageTrainingComplete>
+  <!--EN: You know nothing, {0_nameFull}.-->
+  <NothingToAddToLibrary>{0_nameFull}，我看你完全是不懂喔。</NothingToAddToLibrary>
+  <!--EN: {0_nameDef} has read all the books.-->
+  <AlreadyKnowsTheWholeLibrary>{0_nameDef} 已閱讀所有書籍。</AlreadyKnowsTheWholeLibrary>
+  <!--EN: {0_nameDef} is missing basic knowledge on those subjects.-->
+  <LacksFundamentalKnowledge>{0_nameDef} 缺少這些課題的前置知識。</LacksFundamentalKnowledge>
+  <!--EN: No available weapons to train.-->
   <NoWeaponsFoundToLearn>沒有可訓練的武器。</NoWeaponsFoundToLearn>
-  <MissingRequirementToLearnWeapon>{0_nameDef}沒有有關{1}的知識或書籍。</MissingRequirementToLearnWeapon>
-  <ThoseWeapons>those weapons</ThoseWeapons>
-  <NoWeaponToLearn>{0_nameDef}已經知道如何使用這些武器。</NoWeaponToLearn>
-  <DoesntKnowHowToBuild>{0_nameDef}不知道如何建造{1}（需要{2}）。</DoesntKnowHowToBuild>
-  <DoesntKnowHowToRepair>{0_nameDef}不知道如何修復{1}（需要{2}）。</DoesntKnowHowToRepair>
-  <DoesntKnowHowToCraft>{0_nameDef}不知道如何製作{1}（需要{2}）。</DoesntKnowHowToCraft>
-  <DoesntKnowThisPlant>{0_nameDef}不知道如何栽種{1}（需要{2}）。</DoesntKnowThisPlant>
-  <UnknownWeapon>{0_nameDef}尚未接受使用此武器的訓練。</UnknownWeapon>
-  <EvilWeapon>{0_nameDef}認為這種奇怪的武器是邪惡的，{0_pronoun}不會碰它。</EvilWeapon>
-  <TechAlreadyKnown>{0}是已知的技術。</TechAlreadyKnown>
+  <!--EN: {0_nameDef} has no corresponding knowledge or books to learn about {1}.-->
+  <MissingRequirementToLearnWeapon>{0_nameDef} 缺乏相關的知識或書籍，無法學習 {1}。</MissingRequirementToLearnWeapon>
+  <!--EN: those weapons-->
+  <ThoseWeapons>這些武器</ThoseWeapons>
+  <!--EN: {0_nameDef} already knows how to use those weapons.-->
+  <NoWeaponToLearn>{0_nameDef} 已經知道如何使用這些武器。</NoWeaponToLearn>
+  <!--EN: {0_nameDef} doesn't know how to build a {1} (requires {2}).-->
+  <DoesntKnowHowToBuild>{0_nameDef} 不知如何建造 {1}（需要 {2}）。</DoesntKnowHowToBuild>
+  <!--EN: {0_nameDef} doesn't know how to repair a {1} (requires {2}).-->
+  <DoesntKnowHowToRepair>{0_nameDef} 不知如何修復 {1}（需要 {2}）。</DoesntKnowHowToRepair>
+  <!--EN: {0_nameDef} doesn't know how to {1} (requires {2}).-->
+  <DoesntKnowHowToCraft>{0_nameDef} 不知如何完成「{1}」（需要 {2}）。</DoesntKnowHowToCraft>
+  <!--EN: {0_nameDef} doesn't know how to cultivate {1} (requires {2}).-->
+  <DoesntKnowThisPlant>{0_nameDef} 不知如何栽種 {1}（需要 {2}）。</DoesntKnowThisPlant>
+  <!--EN: {0_nameDef} has not been trained to use this weapon.-->
+  <UnknownWeapon>{0_nameDef} 尚未接受使用此武器的訓練。</UnknownWeapon>
+  <!--EN: {0_nameDef} believes this strange weapon is evil, {0_pronoun} won't touch it.-->
+  <EvilWeapon>{0_nameDef} 認為這種奇怪的武器是邪惡的，因而不會碰它。</EvilWeapon>
+  <!--EN: {0} is already known.-->
+  <TechAlreadyKnown>{0} 是已知的科技。</TechAlreadyKnown>
 
   <!--Go Explore-->
-  <LetterResearchRequest_SuccessHR>這項研究是成功的。通過合作，您對{2}的理解有所提高。\n\n與{0}的關係已改善了{1}。</LetterResearchRequest_SuccessHR>
-  <LetterResearchRequest_TriumphHR>研究取得了巨大的成功！通過一同通力合作，您取得了突破，併發現了{2}的秘密。\n\n與{0}的關係已改善了{1}。</LetterResearchRequest_TriumphHR>
-  <ResearchRequestXPGainHR>{0}，您的研究人員，在{1}獲得了寶貴的專業知識，並獲得了{2}的智識。</ResearchRequestXPGainHR>
+  
+  <!--EN: The research was a success. Working together you advanced in understanding {2}.\n\nRelations with {0} have improved by {1}.-->
+  <LetterResearchRequest_SuccessHR>研究成功！通過合作，您對 {2} 的理解有所提高。\n\n與 {0} 的關系已提升了{1}。</LetterResearchRequest_SuccessHR>
+  <!--EN: The research was a great triumph! Working together you achieved a breakthrough and uncovered the secrets of {2}.\n\nRelations with {0} have improved by {1}.-->
+  <LetterResearchRequest_TriumphHR>研究取得了巨大成功！通過合作，您取得了突破，发現了 {2} 的秘密。\n\n與 {0} 的關系已提升了{1}。</LetterResearchRequest_TriumphHR>
+  <!--EN: {0}, your researcher, acquired valuable expertise in {1} and gained {2} intellectual experience.-->
+  <ResearchRequestXPGainHR>您的研究人員 {0} 在 {1} 上獲得了寶貴的專業知識，並獲得了{2}點智識經驗值。</ResearchRequestXPGainHR>
 
   <!--MISSING:-->
 
