Shorten テクノロジー

--- a/Languages/Japanese/Keyed/HumanResources_keys.xml
+++ b/Languages/Japanese/Keyed/HumanResources_keys.xml
@@ -4,7 +4,7 @@
   <!--UI-->
   
   <!--EN: Tech-->
-  <TabKnowledge>テクノロジー</TabKnowledge>
+  <TabKnowledge>テクノロジ</TabKnowledge>
   <!--EN: Knowledge-->
   <TabKnowledgeTitle>知識</TabKnowledgeTitle>
   <!--EN: Weapons Proficiency-->
